--- a/python/requirements.txt
+++ b/python/requirements.txt
@@ -1,4 +1,6 @@
 astroid==2.0.1
+atomicwrites==1.2.1
+attrs==18.2.0
 certifi==2018.4.16
 chardet==3.0.4
 click==6.7
@@ -19,8 +21,12 @@ jsonschema==2.6.0
 lazy-object-proxy==1.3.1
 MarkupSafe==1.0
 mccabe==0.6.1
+more-itertools==4.3.0
 openapi-codec==1.3.2
+pluggy==0.7.1
+py==1.6.0
 pylint==2.0.1
+pytest==3.8.2
 pytz==2018.5
 PyYAML==3.13
 requests==2.19.1
