--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,3 @@
-<<<<<<< HEAD
-
 # https://raw.githubusercontent.com/github/gitignore/master/Python.gitignore
 
 # Byte-compiled / optimized / DLL files
@@ -112,11 +110,16 @@ venv.bak/
 .mypy_cache/
 .dmypy.json
 dmypy.json
-=======
+
+#####
+
+# perl
 perl5/MYMETA.json
 perl5/MYMETA.yml
 perl5/Makefile
-__pycache__/
+
+# project
 venv/
-*.pyc
->>>>>>> 535ef027ec058511375df5deadd93246af52e219
+sm_auth.txt
+
+cathapi/secret_key.txt
