target sensible browsers

--- a/cathapi/.babelrc
+++ b/cathapi/.babelrc
@@ -1,7 +1,14 @@
 {
     "presets": [
-        "@babel/preset-env", "@babel/preset-react"
-    ],
+        ["@babel/preset-env", {
+            "targets": {
+                "browsers": [
+                    ">0.25%",
+                    "not ie 11",
+                    "not op_mini all"
+                ]
+            }
+        }], "@babel/react" ],
     "plugins": [
         "transform-class-properties"
     ]
