correct domain name

--- a/deploy/httpd/sites-available/cathapi-dev.conf
+++ b/deploy/httpd/sites-available/cathapi-dev.conf
@@ -1,5 +1,5 @@
 <VirtualHost *:80>
- ServerName cathapi-dev.cathdb.info 
+ ServerName cathsm-dev.cathdb.info 
  DocumentRoot /var/www/vhosts/cathapi-dev/cath-swissmodel-api/cathapi
 
  WSGIScriptAlias / /var/www/vhosts/cathapi-dev/cath-swissmodel-api/cathapi/cathapi/wsgi.py 
