--- a/deploy/httpd/sites-available/cathapi-prod.conf
+++ b/deploy/httpd/sites-available/cathapi-prod.conf
@@ -1,5 +1,5 @@
 <VirtualHost *:80>
- ServerName cathapi.cathdb.info 
+ ServerName cathsm.cathdb.info 
  DocumentRoot /var/www/vhosts/cathapi-prod/cath-swissmodel-api/cathapi
  
  WSGIScriptAlias / /var/www/vhosts/cathapi-prod/cath-swissmodel-api/cathapi/cathapi/wsgi.py 
