--- a/deploy/httpd/sites-available/cathapi-staging.conf
+++ b/deploy/httpd/sites-available/cathapi-staging.conf
@@ -1,5 +1,5 @@
 <VirtualHost *:80>
- ServerName cathapi-staging.cathdb.info 
+ ServerName cathsm-staging.cathdb.info 
  DocumentRoot /var/www/vhosts/cathapi-staging/cath-swissmodel-api/cathapi
  
  WSGIScriptAlias / /var/www/vhosts/cathapi-staging/cath-swissmodel-api/cathapi/cathapi/wsgi.py 
