use /usr/local/venvs/blank

--- a/deploy/httpd/conf.modules.d/10-wsgi.conf
+++ b/deploy/httpd/conf.modules.d/10-wsgi.conf
@@ -2,7 +2,7 @@
 
 # pip install mod_wsgi
 # mod_wsgi-express module-config
-LoadModule wsgi_module "/var/www/vhosts/cathsm/cathapi/venv/lib64/python3.6/site-packages/mod_wsgi/server/mod_wsgi-py36.cpython-36m-x86_64-linux-gnu.so"
-WSGIPythonHome "/var/www/vhosts/cathsm/cathapi/venv"
+LoadModule wsgi_module "/usr/local/venvs/blank/lib64/python3.6/site-packages/mod_wsgi/server/mod_wsgi-py36.cpython-36m-x86_64-linux-gnu.so"
+WSGIPythonHome "/usr/local/venvs/blank"
 
 
