--- a/deploy/httpd/sites-available/cathapi-dev.conf
+++ b/deploy/httpd/sites-available/cathapi-dev.conf
@@ -2,17 +2,17 @@
  ServerName cathsm-dev.cathdb.info 
  DocumentRoot /var/www/vhosts/cathapi-dev/cath-swissmodel-api/cathapi
 
- WSGIScriptAlias / /var/www/vhosts/cathapi-dev/cath-swissmodel-api/cathapi/cathapi/wsgi.py 
+ WSGIScriptAlias / /var/www/wsgi/cathapi-dev/wsgi.py 
  
  # adjust the following line to match your Python path 
- WSGIDaemonProcess cathapi-dev.cathdb.info processes=2 threads=15 display-name=%{GROUP} python-home=/var/www/vhosts/cathapi-dev/cath-swissmodel-api/cathapi/venv
+ WSGIDaemonProcess cathapi-dev.cathdb.info processes=2 threads=15 display-name=%{GROUP} python-home=/usr/local/venvs/blank
  WSGIProcessGroup cathapi-dev.cathdb.info
  
- <directory /var/www/vhosts/cathapi-dev/cath-swissmodel-api/cathapi> 
+ <Directory /var/www/vhosts/cathapi-dev/cath-swissmodel-api/cathapi> 
    AllowOverride all
    Require all granted 
    Options FollowSymlinks 
- </directory> 
+ </Directory> 
  
  Alias /static/ /var/www/vhosts/cathapi-dev/cath-swissmodel-api/cathapi/static/ 
  
