--- a/deploy/httpd/sites-available/cathapi-prod.conf
+++ b/deploy/httpd/sites-available/cathapi-prod.conf
@@ -2,10 +2,10 @@
  ServerName cathsm.cathdb.info 
  DocumentRoot /var/www/vhosts/cathapi-prod/cath-swissmodel-api/cathapi
  
- WSGIScriptAlias / /var/www/vhosts/cathapi-prod/cath-swissmodel-api/cathapi/cathapi/wsgi.py 
+ WSGIScriptAlias / /etc/http/wsgi/cathapi-prod/wsgi.py 
  
  # adjust the following line to match your Python path 
- WSGIDaemonProcess cathapi-prod.cathdb.info processes=2 threads=15 display-name=%{GROUP} python-home=/var/www/vhosts/cathapi-prod/cath-swissmodel-api/cathapi/venv
+ WSGIDaemonProcess cathapi.cathdb.info processes=2 threads=15 display-name=%{GROUP} python-home=/usr/local/venvs/blank
  WSGIProcessGroup cathapi-prod.cathdb.info
  
  <directory /var/www/vhosts/cathapi-prod/cath-swissmodel-api/cathapi> 
