move wsgi location

--- a/deploy/httpd/sites-available/cathapi-prod.conf
+++ b/deploy/httpd/sites-available/cathapi-prod.conf
@@ -2,7 +2,7 @@
  ServerName cathsm.cathdb.info 
  DocumentRoot /var/www/vhosts/cathapi-prod/cath-swissmodel-api/cathapi
  
- WSGIScriptAlias / /etc/http/wsgi/cathapi-prod/wsgi.py 
+ WSGIScriptAlias / /var/www/wsgi-scripts/cathapi-prod.wsgi
  
  # adjust the following line to match your Python path 
  WSGIDaemonProcess cathapi.cathdb.info processes=2 threads=15 display-name=%{GROUP} python-home=/usr/local/venvs/blank
