--- a/deploy/httpd/sites-available/cathapi-staging.conf
+++ b/deploy/httpd/sites-available/cathapi-staging.conf
@@ -2,7 +2,7 @@
  ServerName cathsm-staging.cathdb.info 
  DocumentRoot /var/www/vhosts/cathapi-staging/cath-swissmodel-api/cathapi
  
- WSGIScriptAlias / /etc/http/wsgi/cathapi-staging/wsgi.py 
+ WSGIScriptAlias / /var/www/wsgi-scripts/cathapi-staging.wsgi
  
  # adjust the following line to match your Python path 
  WSGIDaemonProcess cathapi-staging.cathdb.info processes=2 threads=15 display-name=%{GROUP} python-home=/usr/local/venvs/blank
