--- a/cathapi/requirements-to-freeze.txt
+++ b/cathapi/requirements-to-freeze.txt
@@ -17,5 +17,9 @@ flex
 swagger_spec_validator
 django-cors-headers
 gunicorn
-cathpy>=0.1.7
+cathpy
 biopython
+celery
+redis
+psycopg2
+django-redis
