now working on production

--- a/deploy/etc/nginx/nginx.conf
+++ b/deploy/etc/nginx/nginx.conf
@@ -1,6 +1,8 @@
-
-#user  nobody;
 worker_processes  1;
+
+user  ucbcisi users;
+error_log /var/log/nginx/error.log;
+pid /var/run/nginx.pid;
 
 #error_log  logs/error.log;
 #error_log  logs/error.log  notice;
@@ -11,12 +13,14 @@ worker_processes  1;
 
 events {
     worker_connections  1024;
+    accept_mutex off;
 }
 
 
 http {
     include       mime.types;
     default_type  application/octet-stream;
+    access_log /var/log/nginx/access.log combined;
 
     #log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
     #                  '$status $body_bytes_sent "$http_referer" '
@@ -30,31 +34,56 @@ http {
     #keepalive_timeout  0;
     keepalive_timeout  65;
 
+    # http://docs.gunicorn.org/en/stable/deploy.html
+    upstream app_server {
+        server unix:/opt/cath-swissmodel-api/cathapi/cathapi.sock fail_timeout=0;
+ 	# server 192.168.0.1:8000 fail_timeout=0; 
+    }
+
     #gzip  on;
 
     server {
+        listen 80 default_server;
+        return 444;
+    }
+
+    # cathapi
+    server {
         listen 80;
-        server_name orengoapi01;
+        client_max_body_size 4G;
 
-        access_log logs/cathapi.access.log main;
-        error_log logs/cathapi.error.log main;
+        server_name api01.cathdb.info orengoapi01;
 
-        location = /favicon.ico { access_log off; log_not_found off; }
-        location /static/ {
-            root /opt/cath-swissmodel-api/cathapi;
-        }
+	location = /favicon.ico { access_log off; log_not_found off; }
 
-        location / {
+        keepalive_timeout 5;
+
+	location /static/ {
+	    root /opt/cath-swissmodel-api/cathapi/static;
+	}
+
+	location / {
+	    # checks for static file, if not found proxy to app
+	    try_files $uri @proxy_to_app;	
+	}
+
+	location @proxy_to_app {
             proxy_set_header Host $http_host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
-            proxy_pass http://unix:/opt/cath-swissmodel-api/cathapi/cathapi.sock;
-        }        
+            proxy_redirect off;
+            proxy_pass http://app_server;
+        }
+	
+	error_page 500 502 503 504 /500.html;
+	location = /500.html {
+	    root /opt/cath-swissmodel-api/cathapi/static;
+	}
     }
 
     server {
-        listen       80 default_server;
+        listen       8080 default_server;
         server_name  localhost;
 
         #charset koi8-r;
