--- a/cathapi/requirements.txt
+++ b/cathapi/requirements.txt
@@ -13,8 +13,9 @@ Click==7.0
 coreapi==2.3.3
 coreschema==0.0.4
 DendroPy==4.4.0
-Django==2.2.2
+Django==2.2.3
 django-cors-headers==3.0.2
+django-debug-toolbar==2.0
 django-extensions==2.1.9
 django-filter==2.1.0
 django-redis==4.10.0
@@ -37,7 +38,7 @@ lazy-object-proxy==1.4.1
 Markdown==3.1.1
 MarkupSafe==1.1.1
 mccabe==0.6.1
-more-itertools==7.0.0
+more-itertools==7.1.0
 numpy==1.16.4
 packaging==19.0
 pluggy==0.12.0
@@ -50,8 +51,9 @@ pylint-plugin-utils==0.5
 pyparsing==2.4.0
 pyrsistent==0.15.2
 pyswagger==0.8.39
-pytest==4.6.3
-pytest-django==3.5.0
+pytest==5.0.1
+pytest-django==3.5.1
+python-decouple==3.1
 pytz==2019.1
 PyYAML==5.1.1
 redis==3.2.1
@@ -59,7 +61,7 @@ requests==2.22.0
 rfc3987==1.3.8
 ruamel.yaml==0.15.97
 selenium==3.141.0
-sentry-sdk==0.9.2
+sentry-sdk==0.9.5
 six==1.12.0
 sqlparse==0.3.0
 strict-rfc3339==0.7
@@ -75,4 +77,3 @@ vine==1.3.0
 wcwidth==0.1.7
 wrapt==1.11.2
 zipp==0.5.1
-django-debug-toolbar
