--- a/cathapi/Docker/cathapi/Dockerfile
+++ b/cathapi/Docker/cathapi/Dockerfile
@@ -14,16 +14,22 @@ RUN /bin/mkdir /cathapi
 ENV SRC_DIR="/cathapi"
 COPY ./ $SRC_DIR
 
+WORKDIR $SRC_DIR
 # Install system dependencies
 RUN apt-get update && \
-    apt-get install -y --no-install-recommends ncbi-blast+ mafft libpq-dev gcc libc-dev && \
-    /bin/rm -rf /var/lib/apt/lists/*
+    apt-get install -y --no-install-recommends \
+    ncbi-blast+  \
+    mafft        \
+    gcc          \
+    libc-dev     \
+    libpq-dev && \
+    /bin/rm -rf /var/lib/apt/lists/* && \
 # Install Python dependencies
-WORKDIR $SRC_DIR
-RUN /usr/local/bin/pip install -r requirements-to-freeze.txt
+    /usr/local/bin/pip install --no-cache-dir -r requirements.txt
 # Create the secret key
 RUN /bin/date | /usr/bin/md5sum > secret_key.txt
 # Run the tests
 #RUN /usr/local/bin/pytest
 
 COPY Docker/cathapi/entrypoint.sh $SRC_DIR
+
