Reduced size of the container by removing "everything test" from the Python installation.

--- a/cathapi/Docker/cathapi/Dockerfile
+++ b/cathapi/Docker/cathapi/Dockerfile
@@ -15,6 +15,7 @@ ENV SRC_DIR="/cathapi"
 COPY ./ $SRC_DIR
 
 WORKDIR $SRC_DIR
+
 # Install system dependencies
 RUN apt-get update && \
     apt-get install -y --no-install-recommends \
@@ -27,9 +28,14 @@ RUN apt-get update && \
 # Install Python dependencies
     /usr/local/bin/pip install --no-cache-dir -r requirements.txt && \
 # Clean up
-    apt-get purge -y --auto-remove gcc libc-dev libpq-dev
+    apt-get purge -y --auto-remove gcc libc-dev libpq-dev && \
+    find /usr/local \( -type d -a -name test -o -name tests \) \
+                   -o \( -type f -a -name '*.pyc' -o -name '*.pyo' \) \
+                   -exec rm -rf '{}' \+
+
 # Create the secret key
 RUN /bin/date | /usr/bin/md5sum > secret_key.txt
+
 # Run the tests
 #RUN /usr/local/bin/pytest
 
