--- a/cathapi/Docker/docker-compose.yml
+++ b/cathapi/Docker/docker-compose.yml
@@ -2,11 +2,11 @@ version: "3.3"
 
 # Build all images:
 #
-# $ docker-compose -f docker-compose.yml build
+# $ docker-compose -f Docker/docker-compose.yml build
 #
 # Start the development instance:
 #
-# $ docker-compose -f docker-compose.yml up
+# $ docker-compose -f Docker/docker-compose.yml up
 #
 
 volumes:
