--- a/cathapi/Docker/nginx/nginx.conf
+++ b/cathapi/Docker/nginx/nginx.conf
@@ -1,28 +1,96 @@
-upstream cathapi {
-  ip_hash;
-  server cathapi-django:8080;
+worker_processes  1;
+
+user  ucbcisi users;
+
+error_log /var/log/nginx/error.log;
+
+# note: the nginx Docker container runs the nginx process as PID 1.
+pid /var/run/nginx.pid;
+
+
+events {
+    # default is 512 but proxy connections (gunicorn) also count, so go twice
+    worker_connections  1024;
+    accept_mutex off;
 }
- 
-server {
-  listen 8000;
-  
-  location /static {  
-    alias /static/; 
-  } 
 
-  location / {
-    proxy_pass http://web;
-    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    proxy_set_header Host $host;
-    proxy_redirect off;
-    # how to test the right buffer size:
-    # curl -s -w \%{size_header} -o /dev/null http://swissmodel-dev.core.unibas.ch/<REST OF THE URL>
-    # divided by the output of `getconf PAGESIZE` gives a rough number. Round
-    # up to the next int.
-    #proxy_buffers 16 20k;
-    #proxy_buffer_size 20k;
-  }
 
-  server_name localhost
-              127.0.0.1;
+http {
+    include       /etc/nginx/mime.types;
+    default_type  application/octet-stream;
+
+    access_log /var/log/nginx/access.log combined;
+    error_log  /var/log/nginx/error.log notice;
+
+    sendfile        on;
+    #tcp_nopush     on;
+
+    keepalive_timeout  65;
+
+    #gzip  on;
+
+    # cathapi - 'upstream' & 'server' contexts should usually go into
+    # /etc/nginx/conf.d/<file name> but since our nginx is is solely for running
+    # the CATH-SM API, we keep it simple and create a single config file for
+    # nginx.
+    upstream cathapi {
+      ip_hash;
+      server cathapi-django:8080;
+    }
+
+    server {
+        # note: SSL is handled on incoming traffic by frontend
+        listen 8000 default_server;
+
+        server_name api01.cathdb.info
+                    orengoapi01;
+                    #localhost
+                    #127.0.0.1;
+
+        client_max_body_size 4G;
+
+        # seems to be duplicated with the global contex, ask Ian
+        keepalive_timeout 5;
+
+        location = /favicon.ico { 
+            access_log off; 
+            log_not_found off; 
+        }
+
+        location /static/ {
+            alias /static/;
+        }
+
+        # here
+        # I'm not sure if try_files is the right thing here, but lets try
+        location / {
+            # checks for static file, if not found proxy to app
+            try_files $uri @proxy_to_app;
+        }
+
+        location @proxy_to_app {
+            proxy_set_header Host $http_host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_redirect off;
+            #proxy_pass http://app_server;
+            proxy_pass http://cathapi;
+
+            # how to test the right buffer size:
+            # curl -s -w \%{size_header} -o /dev/null http://swissmodel-dev.core.unibas.ch/<REST OF THE URL>
+            # divided by the output of `getconf PAGESIZE` gives a rough number.
+            # Round up to the next int.
+            #proxy_buffers 16 20k;
+            #proxy_buffer_size 20k;
+        }
+
+        # Could'nt find any 500.html file, but '/static/' is where our static
+        # files live. Maybe Ian knows more.
+        error_page 500 502 503 504 /500.html;
+        location = /500.html {
+            root /static/;
+        }
+    }
+
 }
