--- a/cathapi/Docker/nginx/Dockerfile
+++ b/cathapi/Docker/nginx/Dockerfile
@@ -6,3 +6,9 @@ FROM nginx:1.16.0-alpine
 RUN adduser --system --ingroup users ucbcisi
 
 ADD nginx.conf /etc/nginx/nginx.conf
+
+RUN touch /var/run/nginx.pid && \
+    chown -R ucbcisi:users /var/run/nginx.pid && \
+    chown -R ucbcisi:users /var/cache/nginx
+
+USER ucbcisi:users
