--- a/cathapi/Docker/nginx/nginx.conf
+++ b/cathapi/Docker/nginx/nginx.conf
@@ -1,6 +1,8 @@
 worker_processes  1;
 
-user  ucbcisi users;
+# We run the whole nginx container by this user so having the 'user' directive
+# here gives a warning.
+#user  ucbcisi users;
 
 error_log /var/log/nginx/error.log;
 
